--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-file-include": "^2.3.0",
     "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
     "gulp-uglify-es": "^3.0.0",
     "sass": "^1.80.6"
   }
