--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "art-beauty",
   "version": "1.0.0",
-  "description": "<h2 align='center'>Simple Landing Page</h2> <hr> <div align='center'><b>Pure HTML, JS and SCSS</b></div> <hr> <div align='center'> <img src='metadata/screenshot.png'> </div>",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,7 @@
   "devDependencies": {
     "browser-sync": "^3.0.3",
     "gulp": "^5.0.0",
+    "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-file-include": "^2.3.0",
     "gulp-sass": "^5.1.0",
